# self-study

./: .gitignore
QML/01_helloworld/: main.qml
QML/02_helloworld/: 02_helloworld.qml  02_helloworld.qmlproject
QML/03_propertiesQML/: 03_propertiesQML.qml  03_propertiesQML.qmlproject
QML/04_Item/: 04_Item.qml  04_Item.qmlproject
QML/05_Rectangle/: 05_Rectangle.qml  05_Rectangle.qmlproject
QML/06_Image/: 06_Image.qml  06_Image.qmlproject
QML/07_Text/: 07_Text.qml  07_Text.qmlproject
QML/08_mouseArea/: main.qml
QML/09_turnRound/: 09_turnRound.pro  image.qrc  main.qml
QML/10_baseSyntax/: 10_baseSyntax.qml  10_baseSyntax.qmlproject
QML/11_component/: 11_component.qml  11_component.qmlproject  Button.qml
QML/12_transformations/: 12_transformations.qml  12_transformations.qmlproject
QML/13_position/: 13_position.qml  13_position.qmlproject  BrightSquare.qml  DarkSquare.qml
QML/14_layout/: 14_layout.qml  14_layout.qmlproject  BlueSquare.qml  GreenSquare.qml
QML/15_TextInput/: 15_TextInput.qml  15_TextInput.qmlproject  TextLineEditV1.qml
QML/16_Keys/: 16_Keys.qml  16_Keys.qmlproject
QML/17_animation/: 17_animation.qml  17_animation.qmlproject
QML/18_applyAnimation/: 18_applyAnimation.qml  (+2 more)
Qt/: README.md
aruco/: CMakeLists.txt
aruco/config/: config.yaml  out.yaml
aruco/src/: camera_calib.cpp  create_board.cpp  create_marker.cpp  detect_marker.cpp  draw_cube.cpp  pose_estimation_board.cpp  pose_estimation_marker.cpp
design_pattern/: README.md
stitch_test/: CMakeLists.txt  README.md
webrtc/: BUILD.gn  README.md  WebRTC源码下载编译.md
(+362 files in other folders)
